--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <body>
     <h1>Ciao, foto di Natale 2024<span></span></h1>
-    <p class="subtitle">Benvenuto nella galleria!</p>
+    <p class="subtitle"><a href="https://noha2011.github.io/Natale-2024/">Benvenuto nella galleria!</a></p>
 </body>
 </html>
