--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animazioni2</title>
+    <title>Natale2024</title>
     <link rel="stylesheet" href="../Galleria/styles.css">
 </head>
 
 
 <body>
-    <h1>Ciao, foto di Natale 2024<span></span></h1>
+    <h1>Auguriiiii!!!, foto di Natale 2024<span></span></h1>
     <p class="subtitle"><a href="https://noha2011.github.io/Natale-2024/">Benvenuto nella galleria!</a></p>
 </body>
 </html>
